checking some KEGG stats

--- a/analyses/7-interpretation/0-enrichment-analysis.ipynb
+++ b/analyses/7-interpretation/0-enrichment-analysis.ipynb
@@ -3327,7 +3327,7 @@
      "text": [
       "09100 Metabolism\n",
       "\t09101 Carbohydrate metabolism\n",
-      "\t\tko00010: 00010 Glycolysis / Gluconeogenesis [PATH:ko00010] (107)\n",
+      "\t\tko00010: 00010 Glycolysis / Gluconeogenesis [PATH:ko00010] (108)\n",
       "\t\tko00020: 00020 Citrate cycle (TCA cycle) [PATH:ko00020] (68)\n",
       "\t\tko00030: 00030 Pentose phosphate pathway [PATH:ko00030] (89)\n",
       "\t\tko00040: 00040 Pentose and glucuronate interconversions [PATH:ko00040] (90)\n",
@@ -3380,7 +3380,7 @@
       "\t\tko00300: 00300 Lysine biosynthesis [PATH:ko00300] (49)\n",
       "\t\tko00310: 00310 Lysine degradation [PATH:ko00310] (98)\n",
       "\t\tko00220: 00220 Arginine biosynthesis [PATH:ko00220] (61)\n",
-      "\t\tko00330: 00330 Arginine and proline metabolism [PATH:ko00330] (108)\n",
+      "\t\tko00330: 00330 Arginine and proline metabolism [PATH:ko00330] (109)\n",
       "\t\tko00340: 00340 Histidine metabolism [PATH:ko00340] (47)\n",
       "\t\tko00350: 00350 Tyrosine metabolism [PATH:ko00350] (84)\n",
       "\t\tko00360: 00360 Phenylalanine metabolism [PATH:ko00360] (74)\n",
@@ -3428,7 +3428,7 @@
       "\t\tko00790: 00790 Folate biosynthesis [PATH:ko00790] (84)\n",
       "\t\tko00670: 00670 One carbon pool by folate [PATH:ko00670] (43)\n",
       "\t\tko00830: 00830 Retinol metabolism [PATH:ko00830] (50)\n",
-      "\t\tko00860: 00860 Porphyrin metabolism [PATH:ko00860] (139)\n",
+      "\t\tko00860: 00860 Porphyrin metabolism [PATH:ko00860] (142)\n",
       "\t\tko00130: 00130 Ubiquinone and other terpenoid-quinone biosynthesis [PATH:ko00130] (59)\n",
       "\t09109 Metabolism of terpenoids and polyketides\n",
       "\t\tko00900: 00900 Terpenoid backbone biosynthesis [PATH:ko00900] (63)\n",
@@ -3579,7 +3579,7 @@
       "\t\tko04370: 04370 VEGF signaling pathway [PATH:ko04370] (39)\n",
       "\t\tko04371: 04371 Apelin signaling pathway [PATH:ko04371] (105)\n",
       "\t\tko04630: 04630 JAK-STAT signaling pathway [PATH:ko04630] (143)\n",
-      "\t\tko04064: 04064 NF-kappa B signaling pathway [PATH:ko04064] (97)\n",
+      "\t\tko04064: 04064 NF-kappa B signaling pathway [PATH:ko04064] (98)\n",
       "\t\tko04668: 04668 TNF signaling pathway [PATH:ko04668] (94)\n",
       "\t\tko04066: 04066 HIF-1 signaling pathway [PATH:ko04066] (76)\n",
       "\t\tko04068: 04068 FoxO signaling pathway [PATH:ko04068] (102)\n",
@@ -3622,7 +3622,7 @@
       "\t\tko04215: 04215 Apoptosis - multiple species [PATH:ko04215] (40)\n",
       "\t\t\tEXCLUDED\tko04216: 04216 Ferroptosis [PATH:ko04216]\n",
       "\t\t\tEXCLUDED\tko04217: 04217 Necroptosis [PATH:ko04217]\n",
-      "\t\tko04115: 04115 p53 signaling pathway [PATH:ko04115] (68)\n",
+      "\t\tko04115: 04115 p53 signaling pathway [PATH:ko04115] (69)\n",
       "\t\tko04218: 04218 Cellular senescence [PATH:ko04218] (117)\n",
       "\t09144 Cellular community - eukaryotes\n",
       "\t\tEXCLUDED\n",
@@ -3698,30 +3698,30 @@
       "\t\tko00199: 00199 Cytochrome P450 [BR:ko00199] (370)\n",
       "\t\tko00194: 00194 Photosynthesis proteins [BR:ko00194] (138)\n",
       "\t09182 Protein families: genetic information processing\n",
-      "\t\tko03000: 03000 Transcription factors [BR:ko03000] (1430)\n",
+      "\t\tko03000: 03000 Transcription factors [BR:ko03000] (1431)\n",
       "\t\tko03021: 03021 Transcription machinery [BR:ko03021] (347)\n",
-      "\t\tko03019: 03019 Messenger RNA biogenesis [BR:ko03019] (445)\n",
-      "\t\tko03041: 03041 Spliceosome [BR:ko03041] (363)\n",
+      "\t\tko03019: 03019 Messenger RNA biogenesis [BR:ko03019] (447)\n",
+      "\t\tko03041: 03041 Spliceosome [BR:ko03041] (367)\n",
       "\t\tko03011: 03011 Ribosome [BR:ko03011] (190)\n",
-      "\t\tko03009: 03009 Ribosome biogenesis [BR:ko03009] (491)\n",
+      "\t\tko03009: 03009 Ribosome biogenesis [BR:ko03009] (542)\n",
       "\t\tko03016: 03016 Transfer RNA biogenesis [BR:ko03016] (270)\n",
       "\t\tko03012: 03012 Translation factors [BR:ko03012] (92)\n",
       "\t\tko03110: 03110 Chaperones and folding catalysts [BR:ko03110] (284)\n",
-      "\t\tko04131: 04131 Membrane trafficking [BR:ko04131] (1307)\n",
+      "\t\tko04131: 04131 Membrane trafficking [BR:ko04131] (1311)\n",
       "\t\tko04121: 04121 Ubiquitin system [BR:ko04121] (777)\n",
       "\t\tko03051: 03051 Proteasome [BR:ko03051] (79)\n",
       "\t\tko03032: 03032 DNA replication proteins [BR:ko03032] (199)\n",
-      "\t\tko03036: 03036 Chromosome and associated proteins [BR:ko03036] (1158)\n",
+      "\t\tko03036: 03036 Chromosome and associated proteins [BR:ko03036] (1160)\n",
       "\t\tko03400: 03400 DNA repair and recombination proteins [BR:ko03400] (485)\n",
-      "\t\tko03029: 03029 Mitochondrial biogenesis [BR:ko03029] (418)\n",
+      "\t\tko03029: 03029 Mitochondrial biogenesis [BR:ko03029] (419)\n",
       "\t09183 Protein families: signaling and cellular processes\n",
-      "\t\tko02000: 02000 Transporters [BR:ko02000] (2003)\n",
+      "\t\tko02000: 02000 Transporters [BR:ko02000] (2009)\n",
       "\t\tko02044: 02044 Secretion system [BR:ko02044] (448)\n",
       "\t\tko02042: 02042 Bacterial toxins [BR:ko02042] (89)\n",
       "\t\tko02022: 02022 Two-component system [BR:ko02022] (266)\n",
       "\t\tko02035: 02035 Bacterial motility proteins [BR:ko02035] (153)\n",
       "\t\tko03037: 03037 Cilium and associated proteins [BR:ko03037] (452)\n",
-      "\t\tko04812: 04812 Cytoskeleton proteins [BR:ko04812] (405)\n",
+      "\t\tko04812: 04812 Cytoskeleton proteins [BR:ko04812] (409)\n",
       "\t\tko04147: 04147 Exosome [BR:ko04147] (701)\n",
       "\t\tko02048: 02048 Prokaryotic defense system [BR:ko02048] (192)\n",
       "\t\tko04030: 04030 G protein-coupled receptors [BR:ko04030] (398)\n",
@@ -3738,22 +3738,22 @@
       "\t\tko00536: 00536 Glycosaminoglycan binding proteins [BR:ko00536] (171)\n",
       "\t\tko00537: 00537 Glycosylphosphatidylinositol (GPI)-anchored proteins [BR:ko00537] (81)\n",
       "\t\tko04091: 04091 Lectins [BR:ko04091] (130)\n",
-      "\t\tko04990: 04990 Domain-containing proteins not elsewhere classified [BR:ko04990] (537)\n",
+      "\t\tko04990: 04990 Domain-containing proteins not elsewhere classified [BR:ko04990] (538)\n",
       "\t09185 Viral protein families\n",
-      "\t\tko03200: 03200 Viral proteins [BR:ko03200] (768)\n",
+      "\t\tko03200: 03200 Viral proteins [BR:ko03200] (770)\n",
       "\t\tko03210: 03210 Viral fusion proteins [BR:ko03210] (71)\n",
       "\t09184 RNA family\n",
       "\t\tko03100: 03100 Non-coding RNAs [BR:ko03100] (417)\n",
       "09190 Not Included in Pathway or Brite\n",
       "\t09191 Unclassified: metabolism\n",
-      "\t\tko99980: 99980 Enzymes with EC numbers (1491)\n",
+      "\t\tko99980: 99980 Enzymes with EC numbers (1492)\n",
       "\t\tko99981: 99981 Carbohydrate metabolism (28)\n",
       "\t\tko99982: 99982 Energy metabolism (121)\n",
-      "\t\tko99983: 99983 Lipid metabolism (28)\n",
+      "\t\tko99983: 99983 Lipid metabolism (29)\n",
       "\t\tko99984: 99984 Nucleotide metabolism (4)\n",
       "\t\tko99985: 99985 Amino acid metabolism (23)\n",
       "\t\tko99986: 99986 Glycan metabolism (30)\n",
-      "\t\tko99987: 99987 Cofactor metabolism (23)\n",
+      "\t\tko99987: 99987 Cofactor metabolism (22)\n",
       "\t\tko99988: 99988 Secondary metabolism (46)\n",
       "\t\tko99999: 99999 Others (12)\n",
       "\t09192 Unclassified: genetic information processing\n",
@@ -3764,11 +3764,11 @@
       "\t\tko99979: 99979 Viral proteins (303)\n",
       "\t\tko99998: 99998 Others (12)\n",
       "\t09193 Unclassified: signaling and cellular processes\n",
-      "\t\tko99977: 99977 Transport (43)\n",
+      "\t\tko99977: 99977 Transport (42)\n",
       "\t\tko99978: 99978 Cell growth (130)\n",
       "\t\tko99993: 99993 Cell motility (26)\n",
       "\t\tko99995: 99995 Signaling proteins (302)\n",
-      "\t\tko99992: 99992 Structural proteins (111)\n",
+      "\t\tko99992: 99992 Structural proteins (109)\n",
       "\t\tko99994: 99994 Others (57)\n",
       "\t09194 Poorly characterized\n",
       "\t\tko99996: 99996 General function prediction only (110)\n",
@@ -4460,13 +4460,13 @@
      "output_type": "stream",
      "text": [
       "ko02000: Transporters [BR:ko02000]\n",
-      "\t434 CyCOGs representing 173/2003 unique KOs\n",
+      "\t434 CyCOGs representing 173/2009 unique KOs\n",
       "ko00541: O-Antigen nucleotide sugar biosynthesis [PATH:ko00541]\n",
       "\t199 CyCOGs representing 34/99 unique KOs\n",
       "ko00520: Amino sugar and nucleotide sugar metabolism [PATH:ko00520]\n",
       "\t195 CyCOGs representing 57/156 unique KOs\n",
       "ko99980: Enzymes with EC numbers\n",
-      "\t159 CyCOGs representing 81/1491 unique KOs\n",
+      "\t159 CyCOGs representing 81/1492 unique KOs\n",
       "ko02048: Prokaryotic defense system [BR:ko02048]\n",
       "\t150 CyCOGs representing 49/192 unique KOs\n",
       "ko03400: DNA repair and recombination proteins [BR:ko03400]\n",
@@ -4484,11 +4484,11 @@
       "ko02020: Two-component system [PATH:ko02020]\n",
       "\t101 CyCOGs representing 50/514 unique KOs\n",
       "ko00860: Porphyrin metabolism [PATH:ko00860]\n",
-      "\t99 CyCOGs representing 50/139 unique KOs\n",
+      "\t99 CyCOGs representing 50/142 unique KOs\n",
       "ko04147: Exosome [BR:ko04147]\n",
       "\t92 CyCOGs representing 36/701 unique KOs\n",
       "ko03036: Chromosome and associated proteins [BR:ko03036]\n",
-      "\t87 CyCOGs representing 41/1158 unique KOs\n",
+      "\t87 CyCOGs representing 41/1160 unique KOs\n",
       "ko00270: Cysteine and methionine metabolism [PATH:ko00270]\n",
       "\t83 CyCOGs representing 31/125 unique KOs\n",
       "ko00195: Photosynthesis [PATH:ko00195]\n",
@@ -4496,7 +4496,7 @@
       "ko00230: Purine metabolism [PATH:ko00230]\n",
       "\t81 CyCOGs representing 46/222 unique KOs\n",
       "ko00010: Glycolysis / Gluconeogenesis [PATH:ko00010]\n",
-      "\t81 CyCOGs representing 29/107 unique KOs\n",
+      "\t81 CyCOGs representing 29/108 unique KOs\n",
       "ko00190: Oxidative phosphorylation [PATH:ko00190]\n",
       "\t80 CyCOGs representing 45/224 unique KOs\n",
       "ko00250: Alanine, aspartate and glutamate metabolism [PATH:ko00250]\n",
@@ -4504,7 +4504,7 @@
       "ko00620: Pyruvate metabolism [PATH:ko00620]\n",
       "\t77 CyCOGs representing 32/134 unique KOs\n",
       "ko03009: Ribosome biogenesis [BR:ko03009]\n",
-      "\t76 CyCOGs representing 47/491 unique KOs\n",
+      "\t76 CyCOGs representing 47/542 unique KOs\n",
       "ko00240: Pyrimidine metabolism [PATH:ko00240]\n",
       "\t67 CyCOGs representing 36/112 unique KOs\n",
       "ko01005: Lipopolysaccharide biosynthesis proteins [BR:ko01005]\n",
@@ -4532,7 +4532,7 @@
       "ko00260: Glycine, serine and threonine metabolism [PATH:ko00260]\n",
       "\t56 CyCOGs representing 28/109 unique KOs\n",
       "ko03029: Mitochondrial biogenesis [BR:ko03029]\n",
-      "\t54 CyCOGs representing 33/418 unique KOs\n",
+      "\t54 CyCOGs representing 33/419 unique KOs\n",
       "ko00630: Glyoxylate and dicarboxylate metabolism [PATH:ko00630]\n",
       "\t53 CyCOGs representing 27/104 unique KOs\n",
       "ko00680: Methane metabolism [PATH:ko00680]\n",
@@ -4560,7 +4560,7 @@
       "ko00051: Fructose and mannose metabolism [PATH:ko00051]\n",
       "\t47 CyCOGs representing 19/113 unique KOs\n",
       "ko03000: Transcription factors [BR:ko03000]\n",
-      "\t45 CyCOGs representing 19/1430 unique KOs\n",
+      "\t45 CyCOGs representing 19/1431 unique KOs\n",
       "ko02035: Bacterial motility proteins [BR:ko02035]\n",
       "\t45 CyCOGs representing 17/153 unique KOs\n",
       "ko00920: Sulfur metabolism [PATH:ko00920]\n",
@@ -4586,7 +4586,7 @@
       "ko00670: One carbon pool by folate [PATH:ko00670]\n",
       "\t38 CyCOGs representing 12/43 unique KOs\n",
       "ko00330: Arginine and proline metabolism [PATH:ko00330]\n",
-      "\t38 CyCOGs representing 18/108 unique KOs\n",
+      "\t38 CyCOGs representing 18/109 unique KOs\n",
       "ko00780: Biotin metabolism [PATH:ko00780]\n",
       "\t37 CyCOGs representing 12/24 unique KOs\n",
       "ko00290: Valine, leucine and isoleucine biosynthesis [PATH:ko00290]\n",
@@ -4608,17 +4608,17 @@
       "ko00220: Arginine biosynthesis [PATH:ko00220]\n",
       "\t28 CyCOGs representing 17/61 unique KOs\n",
       "ko04131: Membrane trafficking [BR:ko04131]\n",
-      "\t27 CyCOGs representing 9/1307 unique KOs\n",
+      "\t27 CyCOGs representing 9/1311 unique KOs\n",
       "ko99978: Cell growth\n",
       "\t27 CyCOGs representing 4/130 unique KOs\n",
       "ko00720: Carbon fixation pathways in prokaryotes [PATH:ko00720]\n",
       "\t27 CyCOGs representing 19/120 unique KOs\n",
       "ko99992: Structural proteins\n",
-      "\t26 CyCOGs representing 8/111 unique KOs\n",
+      "\t26 CyCOGs representing 8/109 unique KOs\n",
       "ko00130: Ubiquinone and other terpenoid-quinone biosynthesis [PATH:ko00130]\n",
       "\t26 CyCOGs representing 16/59 unique KOs\n",
       "ko03019: Messenger RNA biogenesis [BR:ko03019]\n",
-      "\t26 CyCOGs representing 16/445 unique KOs\n",
+      "\t26 CyCOGs representing 16/447 unique KOs\n",
       "ko00480: Glutathione metabolism [PATH:ko00480]\n",
       "\t25 CyCOGs representing 12/57 unique KOs\n",
       "ko00910: Nitrogen metabolism [PATH:ko00910]\n",
@@ -4648,7 +4648,7 @@
       "ko03060: Protein export [PATH:ko03060]\n",
       "\t20 CyCOGs representing 14/49 unique KOs\n",
       "ko99977: Transport\n",
-      "\t20 CyCOGs representing 12/43 unique KOs\n",
+      "\t20 CyCOGs representing 12/42 unique KOs\n",
       "ko00552: Teichoic acid biosynthesis [PATH:ko00552]\n",
       "\t20 CyCOGs representing 8/41 unique KOs\n",
       "ko99975: Protein processing\n",
@@ -4700,7 +4700,7 @@
       "ko00525: Acarbose and validamycin biosynthesis [PATH:ko00525]\n",
       "\t15 CyCOGs representing 2/27 unique KOs\n",
       "ko04812: Cytoskeleton proteins [BR:ko04812]\n",
-      "\t15 CyCOGs representing 8/405 unique KOs\n",
+      "\t15 CyCOGs representing 8/409 unique KOs\n",
       "ko00627: Aminobenzoate degradation [PATH:ko00627]\n",
       "\t14 CyCOGs representing 8/89 unique KOs\n",
       "ko00362: Benzoate degradation [PATH:ko00362]\n",
@@ -4878,7 +4878,7 @@
       "ko03040: Spliceosome [PATH:ko03040]\n",
       "\t1 CyCOGs representing 1/123 unique KOs\n",
       "ko03041: Spliceosome [BR:ko03041]\n",
-      "\t1 CyCOGs representing 1/363 unique KOs\n",
+      "\t1 CyCOGs representing 1/367 unique KOs\n",
       "ko00633: Nitrotoluene degradation [PATH:ko00633]\n",
       "\t1 CyCOGs representing 1/23 unique KOs\n",
       "ko03082: ATP-dependent chromatin remodeling [PATH:ko03082]\n",
@@ -4902,7 +4902,7 @@
       "ko00601: Glycosphingolipid biosynthesis - lacto and neolacto series [PATH:ko00601]\n",
       "\t1 CyCOGs representing 1/28 unique KOs\n",
       "ko99987: Cofactor metabolism\n",
-      "\t1 CyCOGs representing 1/23 unique KOs\n",
+      "\t1 CyCOGs representing 1/22 unique KOs\n",
       "ko00908: Zeatin biosynthesis [PATH:ko00908]\n",
       "\t1 CyCOGs representing 1/10 unique KOs\n",
       "ko00405: Phenazine biosynthesis [PATH:ko00405]\n",
@@ -5729,7 +5729,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/w0/7pz54fg92csc1bv996cgrss80000gn/T/ipykernel_55169/2991882576.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'O-Antigen nucleotide sugar biosynthesis [PATH:ko00541]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/w0/7pz54fg92csc1bv996cgrss80000gn/T/ipykernel_38732/2991882576.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'O-Antigen nucleotide sugar biosynthesis [PATH:ko00541]' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  enrichments_df.loc[path, 'description'] = pathway_names[path]\n"
      ]
     }
@@ -6252,6 +6252,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Mean KEGG pathway size: 127.69\n",
+      "Median KEGG pathway size: 63.0\n",
       "Total KEGG pathways evaluated: 227\n",
       "N unique KEGG pathways enriched: 113\n",
       "Min n enriched pathways per cluster: 1\n",
@@ -6640,6 +6642,8 @@
     "enrichments_df = enrichments_df.sort_index().reset_index().rename(columns={'index': 'KEGG pathway'})\n",
     "enrichments_df.to_csv(out_dir / 'kegg-enrichments.csv', index=False)\n",
     "\n",
+    "print('Mean KEGG pathway size: {:.2f}'.format(np.mean([len(pathway) for pathway in pathway_dict.values()])))\n",
+    "print('Median KEGG pathway size: {}'.format(np.median([len(pathway) for pathway in pathway_dict.values()])))\n",
     "print('Total KEGG pathways evaluated: {}'.format(len(cycog_pathway_dict)))\n",
     "print('N unique KEGG pathways enriched: {}'.format(enrichments_df.shape[0]))\n",
     "print('Min n enriched pathways per cluster: {}'.format(enrichments_df.loc[:, 'pro2':].notna().sum().min()))\n",
@@ -9001,14 +9005,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dc6ca0dd-6429-40f9-836a-4f7d0e8f227d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5651bbf4-9f8f-4790-9eaa-63a63e19b681",
    "metadata": {},
    "outputs": [],
    "source": []
